--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/portal.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/portal.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Login::Práctica Profesional UAO</title>
+		<title>Login::Actividad complementaria UAO</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link rel="stylesheet" type="text/css" href="{{ asset('css/reset.css') }}" />
 		<link rel="stylesheet" type="text/css" href="{{ asset('css/global.css') }}" />
@@ -31,9 +31,9 @@
 					<img id="uaoLogo" src="{{ asset('img/headerLogo.png') }}">
 				</div>
 				<div class="side">
-					<h1>Prácticas Profesionales</h1>
-					<h2>Facultad de Comunicación Social</h2>
-					<h3>Aplicación Web para la gestión del proceso</h3>
+					<h1>Actividad complementaria</h1>
+					<h2>Facultad de Ingeniería</h2>
+					<h3>Actividades complementarias - Aplicación WEB</h3>
 
 					<div id="formWrapper">
 						<form action="{{ path('usuario_login_check') }}" method="post">
