add ver profesores

--- a/src/Ingenieria/DirectorBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/layout.html.twig
@@ -15,9 +15,9 @@
 {% block sideBarMenu %}
 		<div id="menu">	
 
-			<a href="{{ path('usuario_adm_homepage') }}" class="menubutton"  id="programas">
+			<a href="{{ path('ingenieria_director_homepage') }}" class="menubutton"  id="programas">
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
-				<h3>Directores</h3>
+				<h3>Profesores</h3>
 
 			</a>
 
