add casos de uso registro de profesores

--- a/src/Ingenieria/DirectorBundle/Resources/views/Default/error.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/Default/error.html.twig
@@ -1,4 +1,4 @@
-{% extends 'IngenieriaUsuarioBundle::layout.html.twig' %}
+{% extends 'IngenieriaDirectorBundle::layout.html.twig' %}
 
 {% block js  %}
 	<script>
