--- a/src/Ingenieria/DirectorBundle/Resources/views/Default/profesores.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/Default/profesores.html.twig
@@ -40,11 +40,11 @@ $( "#asesoresExternos h3" ).css("opacity","0.4");
 						<th></th> 
 						<th style=" width:10%"><img src="{{ asset('img/idLabel.png') }}"/></th> 
 						<th><h3><span>Centro</span></h3></th>
-						<th><h3><span>Cargo</span></h3></th>
-						<th><img src="{{ asset('img/telefono.png') }}"/></th>
+						<th><img src="{{ asset('img/mailLabel.png') }}"/></th>
 						<th><img src="{{ asset('img/telefonoLabel.png') }}"/></th>
 						<th></th>
-						<th><img src="{{ asset('img/mailLabel.png') }}"/></th>
+						<th></th>
+						
 					</tr> <!--tablehead -->
 				</tbody>
 			</table><!-- practicantes tableHead -->
@@ -74,7 +74,7 @@ $( "#asesoresExternos h3" ).css("opacity","0.4");
 							<td>
 								<table class="opciones" style="right:129px">
 									<td>
-									<a href="{{ path('cituao_coord_externo', { 'ci': asesor.ci}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
+									<a href="{{ path('ingenieria_director_homepage') }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
 									</td>
 								</table>
 							</td>
