--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/registrardirector.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/registrardirector.html.twig
@@ -74,7 +74,7 @@ function passwordStrengthCheck(password1, password2, passwordsInfo)
 	<div class="content">
 		{% block upSection  %}
 		<div class = "upSection">
-			<h1 class ="sectionTitle">Nuevo asesor académico</h1>
+			<h1 class ="sectionTitle">Nuevo director</h1>
 			<a href="{{ path('usuario_adm_homepage') }}" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 		</div>
 		{% endblock  %}
