--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,8 +38,8 @@
 					{% if is_granted('ROLE_ASESOR_ACA') %} Asesor Académico{% endif %}
 				</h2> {% block foto %} {% endblock %}
 				<div id="imgContainer">
-				 {% if is_granted('ROLE_ASESOR_EXT') %}<img  width="100%" src="{{ asset('uploads/fotos/externoPicture.png') }}" onerror="this.src='{{ asset('uploads/fotos/defaultPicture.png') }}'"/>{% endif %}
-				 {% if is_granted('ROLE_COORDINADOR') %}<img  width="100%" src="{{ asset('uploads/fotos/defaultPicture.png') }}" onerror="this.src='{{ asset('uploads/fotos/defaultPicture.png') }}'"/>{% endif %}
+				 {% if is_granted('ROLE_PROFESOR') %}<img  width="100%" src="{{ asset('img/defaultPicture.png') }}" onerror="this.src='{{ asset('uploads/fotos/defaultPicture.png') }}'"/>{% endif %}
+				 {% if is_granted('ROLE_DIRECTOR') %}<img  width="100%" src="{{ asset('img/defaultPicture.png') }}" onerror="this.src='{{ asset('uploads/fotos/defaultPicture.png') }}'"/>{% endif %}
 				 {% if is_granted('ROLE_PRACTICANTE') %} <img  width="100%" src="{{ asset('uploads/fotos/defaultPicture.png') }}" onerror="this.src='{{ asset('uploads/fotos/defaultPicture.png') }}'"/>{% endif %}
 				 {% if is_granted('ROLE_ASESOR_ACA') %} <img  width="100%" src="{{ asset('uploads/fotos/defaultPicture.png') }}" onerror="this.src='{{ asset('uploads/fotos/defaultPicture.png') }}'"/> {% endif %}
 				{% if is_granted('ROLE_ADMIN') %} <img  width="100%" src="{{ asset('img/defaultPicture.png') }}" onerror="this.src='{{ asset('uploads/fotos/defaultPicture.png') }}'"/> {% endif %}
