add homepage profesor

--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/index.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,17 @@
-Hello {{ name }}!
+{% extends 'IngenieriaProfesorBundle::layout.html.twig' %}
+
+{% block content  %}
+	<div class="content">
+	{{ parent() }}
+
+		{% block upSection  %}
+			<div class = "upSection">
+			</div>
+		{% endblock  %}
+
+		{% block downSection  %}
+			<div class = "downSection">
+			</div>
+		{% endblock %}
+	</div> <!-- content -->
+{% endblock %}
