--- a/src/Ingenieria/ProfesorBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/layout.html.twig
@@ -14,9 +14,9 @@
 
 {% block sideBarMenu %}
 		<div id="menu">	
-			<a href="{{ path('ingenieria_director_homepage') }}" class="menubutton"  id="programas">
+			<a href="{{ path('ingenieria_profesor_homepage') }}" class="menubutton"  id="programas">
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
-				<h3>Profesores</h3>
+				<h3>Estudiantes</h3>
 			</a>
 
 		</div>
