--- a/src/Ingenieria/ProfesorBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/layout.html.twig
@@ -14,9 +14,13 @@
 
 {% block sideBarMenu %}
 		<div id="menu">	
-			<a href="{{ path('ingenieria_profesor_homepage') }}" class="menubutton"  id="programas">
+			<a href="{{ path('ingenieria_profesor_estudiantes') }}" class="menubutton"  id="programas">
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
 				<h3>Estudiantes</h3>
+			</a>
+			<a href="{{ path('ingenieria_profesor_homepage') }}" class="menubutton"  id="programas">
+				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
+				<h3>Actividades</h3>
 			</a>
 
 		</div>
