add - title modulo

--- a/src/Ingenieria/DirectorBundle/Resources/views/Default/registrarprofesor.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/Default/registrarprofesor.html.twig
@@ -1,7 +1,7 @@
 {% extends 'IngenieriaDirectorBundle::layout.html.twig' %}
 
 {% block programa %}
-Dirección 
+Aplicación WEB - [Director]
 {% endblock %}
 
 {% block js  %}
