--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
@@ -62,20 +62,16 @@ $( "#actividades h3" ).css("opacity","0.4");
 						
 							<td><h2>{{ id }}</h2></td>
 							
-							<td style=" width:15%"><span style="margin-left:20px; ">{{ actividad.nombre }}</span></td>
+							<td style=" width:40%"><span style="margin-left:30px; ">{{ actividad.nombre }}</span></td>
 							<td style=" width:12%"><span>{{ actividad.url }}</span></td>
 							<td style=" width:8%">{{ actividad.numeroCupos }}</td>
-							<td></td>
-							<td></td>
-							<td style=" width:8%"></td>
-							<td style=" width:8%"></td>
-							<td style=" width:8%"></td>
+							<td style=" width:50%"></td>
 							<td></td>
 
 							<td>
 								<table class="opciones" style="right:129px">
 									<td>
-									<a href="{{ path('ingenieria_director_profesor' , { 'ci': profesor.ci}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
+									<a href="{{ path('ingenieria_profesor_actividad' , { 'id': actividad.id}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
 									</td>
 								</table>
 							</td>
