add caso de uso ver estudiantes

--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/directores.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/directores.html.twig
@@ -2,9 +2,9 @@
 
 {% block js  %}
 <script>
-$( "#programas" ).css("background-color","#000");
-$( "#programas img" ).css("opacity","0.4");
-$( "#programas h3" ).css("opacity","0.4");
+$( "#directores" ).css("background-color","#000");
+$( "#directores img" ).css("opacity","0.4");
+$( "#directores h3" ).css("opacity","0.4");
 </script>
 
 {% endblock %}
