--- a/web/css/psass/sass/contentStyle.scss
+++ b/web/css/psass/sass/contentStyle.scss
@@ -26,15 +26,11 @@
  	z-index: 3;
 
  	h1{
-
- 		/*width: 150px;*/
-
- 		background-color: $redColor;
- 		padding: 3px 0px;
- 		padding-right:15px;
- 		padding-left: $contentLeftMargin;
- 		float: left;
-
+		background-color: $redColor;
+		padding: 3px 0px;
+		padding-right:15px;
+		padding-left: $contentLeftMargin;
+		float: left;
  	}
 
  	a{
@@ -70,13 +66,10 @@
 
  	}
  	#form{
-
-
  		div{
  			float: right !important;
  		}
  	}
-
  }
 
 
@@ -85,12 +78,9 @@
  	margin-top:83px;
  	padding-bottom:80px;
  	/*border:1px solid #000;*/
-
-
-
  }
- .practicantesTableHead, .generalTableHead{
 
+ .practicantesTableHead, .generalTableHead{
  	width: 100%;
  	padding-left: $contentLeftMargin;
 
@@ -103,16 +93,14 @@
  		width: 100%;
  		padding-top:5px;
  		z-index: 3;
-
  	}
  }
- .practicantesTable{
 
+ .practicantesTable{
  	width: 100%;
  	padding-left: $contentLeftMargin;
  	height:auto;
  	table-border:collapse;
-
  	.tableHead{
  		background-color: $softGray;
  		height: 35px;
@@ -122,27 +110,19 @@
  		width: 100%;
  		padding-top:5px;
  		z-index: 3;
-
  	}
+
  	.tableItem{
  		margin: 10px 0px;
  		/*border:2px solid $darkGray;*/
  		height: 20px;
  		color: black;
  		position:relative;
-
-
  	}
-
 
  	.tableItem:hover{
  		color:white !important;
  	}
-
-
-
-
-
 
  	#hoverDiv{
  		height: 55px;
@@ -152,24 +132,18 @@
  		border-top:1px solid $softGray;
  		border-bottom:1px solid $softGray;
  		z-index: 2;
-
  	}
 
  	.opciones{
-
  		position:absolute;
  		opacity: 0;
-
-
  		padding:5px 10px;
  		background-color: $darkGray;
  		top:26px;
  		right: 36%;
  		z-index:10;
  		overflow: hidden;
-
  		@include border-radius(3px);
-
  		td{
  			padding: 1px 6px;
  			min-width: 120px;
@@ -189,11 +163,7 @@
  			margin-top: 9px;
  			margin-left: 5px;
  		}
-
-
- 		} /* practicantesTable */
-
-
+	} /* opciones */
 
 
  		.spacer{
@@ -203,20 +173,14 @@
  		img{
  			position:relative;
  			margin:0 auto;
-
  		}
-
 
  		td{
  			position:relative;
  			font-family:  helvetica;
  			font-size: 14px;
-
-
  			z-index: 2;
-
  		}
-
 
  		h2{
  			color: $softGray;
@@ -258,8 +222,6 @@
  			float: left;
  			margin-bottom: 10px;
  			/*border: 1px solid #000;*/
-
-
  		}
  		.profileFormContainer{
  			width: 800px;
@@ -286,8 +248,6 @@
  			.input{
  				float: left;
  			}
-
-
  		}
  		.selFile{
  			width:300px;
@@ -360,7 +320,6 @@
  		}
 
  		.generalTable{
-
  			width: 100%;
  			padding-left: $contentLeftMargin;
  			height:auto;
@@ -375,7 +334,6 @@
  				width: 100%;
  				padding-top:5px;
  				z-index: 3;
-
  			}
  			.tableItem{
  				margin: 10px 0px;
@@ -384,20 +342,12 @@
  				height: 40px;
  				color: black;
  				position:relative;
-
-
  			}
-
 
  			.tableItem:hover{
  				color:white !important;
  				background-color: $redColor;
  			}
-
-
-
-
-
 
  			#hoverDiv{
  				height: 65px;
@@ -405,11 +355,9 @@
  				position: absolute;
  				margin-top: -30px;
  				z-index: 2;
-
  			}
 
  			.opciones{
-
  				position:absolute;
  				opacity: 0;
 
@@ -451,8 +399,6 @@
  				} /* generalTable */
 
 
-
-
  				.spacer{
  					height: 40px;
  				}
@@ -460,7 +406,6 @@
  				img{
  					position:relative;
  					margin:0 auto;
-
  				}
 
 
@@ -468,13 +413,8 @@
  					position:relative;
  					font-family:  helvetica;
  					font-size: 14px;
-
-
-
  					z-index: 2;
-
  				}
-
 
  				h2{
  					color: $softGray;
@@ -521,8 +461,6 @@
  					overflow: auto;
  					height:650px;
 
-
-
  					.activity{
  						margin-top: 30px;
  						width: 100%;
@@ -565,8 +503,6 @@
  									width: auto;
  								}
  							}
-
-
  						}
 
  						h1 label{
@@ -586,7 +522,6 @@
 
  						textarea
  						{
-
  							@include border-radius(3px);
  							width:400px;
  							height: 150px;
