--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/subirestudiantes.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/subirestudiantes.html.twig
@@ -42,7 +42,7 @@
 			
 						{% set id = 1 %}
 						<div style="width: 100%; height: 750px; overflow: auto; position:relative; padding-bottom:30px;"> 
-							<table class="practicantesTable">
+							<table class="generalTable">
 								{% for estudiante in listaEstudiantes %}
 									<tr class="spacer"></tr>
 									<tr height="20px" class="tableItem">
